k8s/service-debugger.yaml
apiVersion: v1
kind: Service
metadata:
  name: debugger-service
spec:
  selector:
    app: debugger-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
