k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  selector:
    app: content-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
