k8s/ingress-debugger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debugger-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /debugger/
        pathType: ImplementationSpecific
        backend:
          service:
            name: debugger-service
            port:
              number: 8080
