k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /dashboard/
        pathType: ImplementationSpecific
        backend:
          service:
            name: content-service
            port:
              number: 8080
